fix on mobile size
- change size of keys
- remove position absolute from keyboard
- set max width to header line

--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -7,7 +7,8 @@
 
 .header:after {
     content: "";
-    width: 400px;
+    max-width: 400px;
+    width: 90%;
     height: 2px;
     background-color: #fff;
     position: absolute;
