--- a/frontend/src/components/virtual-keyboard/Key/Key.module.css
+++ b/frontend/src/components/virtual-keyboard/Key/Key.module.css
@@ -13,7 +13,7 @@
 
 @media (max-width: 512px) {
     .key {
-        padding: 0.7rem 0.8rem;
+        padding: 0.6rem 0.7rem;
         font-size: 16px;
     }
 }
